--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,19 @@
         <!-- Swagger -->
         <swagger.version>2.8.0</swagger.version>
         <swagger-ui.version>2.8.0</swagger-ui.version>
+
+        <!-- Test -->
+        <junit.version>5.4.2</junit.version>
+        <junit-platform-commons.version>1.4.2</junit-platform-commons.version>
+        <mockito.version>2.26.0</mockito.version>
+        <embedmongo-spring.version>1.3.1</embedmongo-spring.version>
+        <flapdoodle.embed.mongo-version>2.2.0</flapdoodle.embed.mongo-version>
+        <apache.commons.io.version>2.6</apache.commons.io.version>
+        <hamcrest.version>1.3</hamcrest.version>
+
+        <!-- Logging -->
+        <org.slf4j.jcl-over-slf4j.version>1.7.12</org.slf4j.jcl-over-slf4j.version>
+        <net.logstash.logback.version>4.5.1</net.logstash.logback.version>
     </properties>
 
     <parent>
@@ -81,6 +94,82 @@
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
+        </dependency>
+
+        <!-- Logging -->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>${net.logstash.logback.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${org.slf4j.jcl-over-slf4j.version}</version>
+        </dependency>
+
+        <!-- ****** Test ****** -->
+
+
+        <!-- Spring -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- JUnit -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-commons</artifactId>
+            <version>${junit-platform-commons.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Persistence -->
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <version>${flapdoodle.embed.mongo-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>cz.jirutka.spring</groupId>
+            <artifactId>embedmongo-spring</artifactId>
+            <version>${embedmongo-spring.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Assertions -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
