--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,7 @@
         <swagger-ui.version>2.8.0</swagger-ui.version>
 
         <!-- Test -->
-        <junit.version>5.4.2</junit.version>
-        <junit-platform-commons.version>1.4.2</junit-platform-commons.version>
+        <junit-jupiter-version>5.2.0</junit-jupiter-version>
         <mockito.version>2.26.0</mockito.version>
         <embedmongo-spring.version>1.3.1</embedmongo-spring.version>
         <flapdoodle.embed.mongo-version>2.2.0</flapdoodle.embed.mongo-version>
@@ -137,26 +136,20 @@
         <!-- JUnit -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>${junit.version}</version>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-jupiter-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit.version}</version>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit-jupiter-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-commons</artifactId>
-            <version>${junit-platform-commons.version}</version>
+            <version>${junit-jupiter-version}</version>
             <scope>test</scope>
         </dependency>
 
